# Linux-Basics

./: .clang-format  .gitignore  CMakeLists.txt  README.md
linux-basics/: dir.cpp  error.cpp  more-dir.cpp  multi-process-and-signal.cpp  readFile.cpp  time.cpp  writeFile.cpp
linux-process/: CircularQueue.h  Person.h  Semephore.h  call-exec.cpp  circularqueue-demo.cpp  circularqueue-shared-memory-demo.cpp  consumer.cpp  create-process.cpp  demo.cpp  getpid.cpp  multi-process-and-signal.cpp  process-end.cpp  process-signal.cpp  producer.cpp  semephore-demo.cpp  shared-memory.cpp  zombie-process.cpp
linux-signal/: call-exec.cpp  getpid.cpp  process-end.cpp  zombie-process.cpp
linux-socket/: FileInfo.h  SocketPerson.h  TcpClient.h  TcpServer.h  demo-client.cpp  demo-server.cpp  fileReceiver.cpp  fileSender.cpp  tcpClientDemo.cpp  tcpServerDemo.cpp  tcpServerMultiProcessDemo.cpp
